--- a/htdocs/layout/footer.html
+++ b/htdocs/layout/footer.html
@@ -18,7 +18,7 @@ google_color_text = "AECCEB";
 </tr></table>
 <table width="100%" border="0" cellspacing="0" cellpadding="2" class="bar">
 <tr><td align="center" class="bar">
-FormBuilder is &copy; 2000-2006 <a href="/contrib/author.pl" class="bar">Nate Wiger</a>,
+FormBuilder is &copy; <a href="/contrib/author.pl" class="bar">Nate Wiger</a>,
 with contributions from <a href="/contrib/" class="bar">many people</a>.
 </td></tr></table>
 <div align="center">
